<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.deagle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.deagle.ui.dashboard.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_class"
        android:name="com.example.deagle.ui.kelas.ClassFragment"
        android:label="@string/title_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.example.deagle.ui.transactions.TransactionsFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.deagle.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>